--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+ <!-- OAuth: Kakao -->
+ <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+ <script>
+   Kakao.init('cbb9375f95916e324c9143ef3c5bf30d');
+ </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
