--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
    Kakao.init('cbb9375f95916e324c9143ef3c5bf30d');
  </script>
 
+ <!-- Oauth: naver -->
+ <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
