--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,12 @@
  <!-- Oauth: naver -->
  <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
 
+ 
+  <!-- jQuery (결제를 위한 -> axios사용할거임)-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+  <!-- iamport.payment.js (결제를 위한)-->
+  <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script> 
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
